--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Michroma&family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="header">
@@ -24,16 +27,9 @@
         </div></div>
     </section> 
 
-    <!--BANNER-->   <img src="imagens/banner1.png" alt="Banner1">
+    <!--BANNER-->   <img id="bannerimg" src="imagens/banner img.png" alt="Banner1">
 
-    <section class="boxes">
-    <div class="box1"><p>PÁGINA INICIAL</p></div><hr>
-    <div class="box2"><p>DESTAQUES</p></div><hr>
-    <div class="box3"><p>SERVIÇOS</p></div><hr>
-    <div class="box4"><p>PRODUTOS</p></div><hr>
-    <div class="box5"><p>SUPORTE</p></div>
 
-</section>
 
         <div class="wrapper">
             <div class="carros"><img src="imagens/carros1.png" alt="Carros"></div>
@@ -44,9 +40,43 @@
 
          <div class="wrapper-txt"><p>CARROS</p> <p>MOTOS</p> <p>DIVERSOS</p></div>
 
+
          <div class="wrapper2">
             <div class="oferta1"><img src="imagens/ofertacarro.png" alt="Oferta 1"></div>
             <div class="oferta2"><img src="imagens/ofertamoto.png" alt="Oferta 2"></div>
          </div>
+
+         <aside>
+            <div><strong>SEGURO</strong></div>
+            <div><strong>FINANCIAMENTO</strong></div>
+            <div><strong>CONSÓRCIO</strong></div>
+         </aside>
+<hr>
+
+         <footer>
+            <div class="footer">
+                <div>
+                    <p style="font-size: 24px;"><strong>Informações</strong>
+                    <p>FAQ-Perguntas Frequentes</p>
+                    <p>Políticas de Privacidade</p>
+                </div>
+                <div>
+                    <p style="font-size: 24px;"><strong>Concessionárias</strong></p>
+                    <p>Carros</p>
+                    <p>Motos</p>
+                </div>
+                <div>
+                    <p style="font-size: 24px;"><strong>Contato</strong></p>
+                    <p>Consórcio / Banco / Seguros Original Motors:</p>
+                    <p>CAC: (telefone) (e-mail) </p>
+                </div>
+            </div>
+
+            <div class="footer2">
+                    <p>Termos de Serviços</p>
+                    <p>2024 © Original Cars - Todos os direitos Reserva   dos | Política de Privacidade | Termos de Uso</p>
+            </div>
+         </footer>
+
 </body>
 </html>
